--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <mat-sidenav-container>
   <mat-sidenav mode="side" opened>navigation</mat-sidenav>
-  <mat-sidenav-content>article</mat-sidenav-content>
+  <mat-sidenav-content>
+    <app-article></app-article>
+  </mat-sidenav-content>
 </mat-sidenav-container>
