Configure articles routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container>
   <mat-sidenav mode="side" opened>navigation</mat-sidenav>
   <mat-sidenav-content>
-    <app-article></app-article>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
