--- a/src/app/components/article/article.component.css
+++ b/src/app/components/article/article.component.css
@@ -1,3 +1,7 @@
+.article {
+  position: relative;
+}
+
 .title {
 }
 
@@ -10,4 +14,10 @@
 
 .content {
   margin-top: 20px;
+}
+
+.btn-controls {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
