--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="btn-controls">
-    <button mat-icon-button routerLink="/article/edit">
+    <button mat-icon-button [routerLink]="['/articles', article.id, 'edit']">
       <mat-icon>create</mat-icon>
     </button>
 
