--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-sidenav-container>
-  <mat-sidenav mode="side" opened>navigation</mat-sidenav>
+  <mat-sidenav mode="side" opened>
+    <app-heading-tree></app-heading-tree>
+  </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
