--- a/src/app/components/heading-tree-node/heading-tree-node.component.html
+++ b/src/app/components/heading-tree-node/heading-tree-node.component.html
@@ -1,4 +1,4 @@
-<a class="heading-link" href="#">{{ articleTreeNode.article.title }}</a>
+<a class="heading-link" [routerLink]="['articles', articleTreeNode.article.id]">{{ articleTreeNode.article.title }}</a>
 <ul class="heading-list" *ngIf="articleTreeNode.childNodes.length > 0">
     <li class="heading-tree-item" *ngFor="let childNode of articleTreeNode.childNodes;">
         <app-heading-tree-node [articleTreeNode]="childNode"></app-heading-tree-node>
