Edit template of article-editor component

--- a/src/app/components/article-editor/article-editor.component.html
+++ b/src/app/components/article-editor/article-editor.component.html
@@ -1,1 +1,15 @@
-<p>article-editor works!</p>
+<mat-form-field class="example-full-width text-field">
+  <input matInput placeholder="Заголовок">
+</mat-form-field>
+
+<mat-form-field class="example-full-width text-field">
+  <textarea matInput placeholder=""></textarea>
+</mat-form-field>
+<div class="btn-contols">
+  <button mat-flat-button class="save">
+    Сохранить
+  </button>
+  <button mat-stroked-button>
+    Отменить
+  </button>
+</div>
