--- a/src/app/components/article-editor/article-editor.component.html
+++ b/src/app/components/article-editor/article-editor.component.html
@@ -1,12 +1,12 @@
 <mat-form-field class="example-full-width text-field">
-  <input matInput placeholder="Заголовок">
+  <input [(ngModel)]="article.title" matInput placeholder="Заголовок">
 </mat-form-field>
 
 <mat-form-field class="example-full-width text-field">
   <textarea matInput placeholder=""></textarea>
 </mat-form-field>
 <div class="btn-contols">
-  <button mat-flat-button class="save">
+  <button (click)="saveChange();" [routerLink]="['/articles', article.id]" mat-flat-button class="save">
     Сохранить
   </button>
   <button mat-stroked-button>
