#5: Change view date of component "article"

--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -7,7 +7,7 @@
 
   <div class="info">
     <div>
-      {{ article.creationTime | date: "dd.MM.yyyy" }}
+      {{ article.updateTime | date: "dd.MM.yyyy hh:mm" }}
       <span class="version">версия: {{ article.version }}</span>
     </div>
     <div class="content">
