--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -1,8 +1,7 @@
 <mat-form-field class="tag-list">
  <mat-chip-list #chipList aria-label="Tag selection">
     <mat-chip
-      *ngFor="let tag of tags"
-      [selectable]="selectable"
+      *ngFor="let tag of articleTags"
       [removable]="removable"
       (removed)="remove(tag)">
       {{tag.value}}
@@ -16,12 +15,11 @@
       [matAutocomplete]="auto"
       [matChipInputFor]="chipList"
       [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-      [matChipInputAddOnBlur]="addOnBlur"
       (matChipInputTokenEnd)="add($event)">
   </mat-chip-list>
   <mat-autocomplete  #auto="matAutocomplete" (optionSelected)="selected($event)" >
-    <mat-option *ngFor="let tag of filteredTags | async" [value]="tag">
-      {{tag.value}}
+    <mat-option *ngFor="let tag of filteredTags | async" [value]="tag.value">
+      {{ tag.value }}
     </mat-option>
   </mat-autocomplete>
 
