Add tags to article component

--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -32,6 +32,8 @@
 
   </div>
 
+  <app-tags [articleId]="article.id"></app-tags>
+
   <app-comments [articleId]="article.id"></app-comments>
 
 </div>
