--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -26,7 +26,7 @@
     <mat-menu #beforeMenu="matMenu" xPosition="before">
       <button mat-menu-item>Удалить</button>
       <button mat-menu-item>Переместить</button>
-      <button mat-menu-item (click)="addChildArticle()" [routerLink]="['/articles', article.id, 'add']">
+      <button mat-menu-item [routerLink]="['/articles', article.id, 'add']">
         Добавить дочернюю страницу
       </button>
     </mat-menu>
