#8: Implements the addition of a child article

--- a/src/app/components/article-editor/article-editor.component.html
+++ b/src/app/components/article-editor/article-editor.component.html
@@ -7,7 +7,7 @@
 </mat-form-field>
 
 <div class="btn-contols">
-  <button (click)="saveChange();" [routerLink]="['/articles', id]" mat-flat-button class="save">
+  <button (click)="save();" mat-flat-button class="save">
     Сохранить
   </button>
   <button [routerLink]="['/articles', id]" mat-stroked-button>
