--- a/src/app/components/heading-tree/heading-tree.component.html
+++ b/src/app/components/heading-tree/heading-tree.component.html
@@ -1,4 +1,5 @@
-<app-heading-tree-node 
+<app-heading-tree-node class="tree-node"
     *ngFor="let rootNode of articleTree.rootNodes" 
-    [articleTreeNode]="rootNode">
+    [articleTreeNode]="rootNode"
+    [id]="id">
 </app-heading-tree-node>
