--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -5,10 +5,12 @@
     </h1>
   </div>
 
-  <div class="info">
-    <div>
-      {{ article.updateTime | date: "dd.MM.yyyy hh:mm" }}
-      <span class="version">версия: {{ article.version }}</span>
+  
+  <div>
+    <div class="info">
+      <span class="version">Версия: {{ article.version }}</span>
+      <br>
+      Последнее обновление: {{ article.updateTime | date: "dd.MM.yyyy HH:mm" }}      
     </div>
     <div class="content" markdown [data] = 'article.content'>
     </div>
