--- a/src/app/components/comments/comments.component.css
+++ b/src/app/components/comments/comments.component.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    padding: 0 10px;
+    padding: 0;
+
 }
 
 .caption {
@@ -23,7 +24,9 @@
     margin: 8px 0;
     white-space: pre-line;
 }
-
+.comment-field {
+    margin-bottom: 4px;
+}
 .button {
-     align-self: flex-end;
+     align-self: flex-start;
 }
