--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -5,7 +5,7 @@
         <p class="comment-text">{{ comment.text }}</p>
     </div>
 </div>
-<mat-form-field class="example-full-width">
+<mat-form-field class="comment-field">
     <textarea matInput placeholder="Написать комментарий" 
         [(ngModel)]="commentText" 
         cdkTextareaAutosize
