--- a/src/app/components/heading-tree/heading-tree.component.css
+++ b/src/app/components/heading-tree/heading-tree.component.css
@@ -1,4 +1,9 @@
 :host {
     display: block;
-    padding: 12px;
+    padding: 0;
+    font-size: 14px;
+}
+.tree-node {
+    white-space: nowrap;
+    padding: 0;
 }
