#9: Add article-search component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <mat-sidenav-container>
   <mat-sidenav mode="side" opened>
+    <app-article-search></app-article-search>
     <app-heading-tree></app-heading-tree>
   </mat-sidenav>
   <mat-sidenav-content>
