--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -26,8 +26,8 @@
     </button>
 
     <mat-menu #beforeMenu="matMenu" xPosition="before">
-      <button mat-menu-item>Удалить</button>
-      <button mat-menu-item>Переместить</button>
+      <button mat-menu-item disabled>Удалить</button>
+      <button mat-menu-item disabled>Переместить</button>
       <button mat-menu-item [routerLink]="['/articles', article.id, 'add']">
         Добавить дочернюю страницу
       </button>
