--- a/src/app/components/article-search/article-search.component.html
+++ b/src/app/components/article-search/article-search.component.html
@@ -1,6 +1,6 @@
 <form class="search-form">
-    <mat-icon matPrefix class="search-icon">search</mat-icon>
     <mat-form-field>
+        <!-- <mat-icon matPrefix inline="true" class="search-icon">search</!-->
         <input #searchInput type="text" placeholder="Поиск..." matInput [formControl]="searchControl"
             [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)" [displayWith]="display">
