Disable closing sideNav on Esc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container>
-  <mat-sidenav mode="side" opened>
+  <mat-sidenav mode="side" opened disableClose>
     <app-article-search></app-article-search>
     <app-heading-tree></app-heading-tree>
   </mat-sidenav>
