--- a/src/app/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/components/delete-dialog/delete-dialog.component.html
@@ -1,1 +1,7 @@
-<p>delete-dialog works!</p>
+<div mat-dialog-content>
+    <p>Вы действительно хотите удалить статью?</p>    
+</div>
+<div mat-dialog-actions>
+    <button mat-button mat-raised-button color="primary">Да</button>
+    <button mat-button (click)="onNoClick()">Нет</button>
+</div>
