--- a/src/app/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/components/delete-dialog/delete-dialog.component.html
@@ -2,6 +2,6 @@
     <p>Вы действительно хотите удалить статью?</p>    
 </div>
 <div mat-dialog-actions>
-    <button mat-button mat-raised-button color="primary">Да</button>
+    <button mat-button mat-raised-button color="primary" (click)="onYesClick()">Да</button>
     <button mat-button (click)="onNoClick()">Нет</button>
 </div>
