--- a/src/app/components/article-editor/article-editor.component.html
+++ b/src/app/components/article-editor/article-editor.component.html
@@ -6,7 +6,7 @@
   <textarea [(ngModel)]="content" matInput class="textarea"></textarea>
 </mat-form-field> -->
 
-<quill-editor [(ngModel)]="content"></quill-editor>
+<quill-editor placeholder="" [modules]="quillConfig" [(ngModel)]="content"></quill-editor>
 
 <div class="btn-contols">
   <button (click)="save();" mat-raised-button color="primary" class="button">
