Change mock article titles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container>
   <mat-sidenav mode="side" opened disableClose>
     <app-article-search></app-article-search>
-    <app-heading-tree></app-heading-tree>
+    <app-rubric></app-rubric>
   </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
