--- a/src/app/components/rubric/rubric.component.html
+++ b/src/app/components/rubric/rubric.component.html
@@ -1,10 +1,8 @@
 <p>78: ВОЕННОЕ ДЕЛО</p>
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="tree">
   <!-- This is the tree node template for leaf nodes -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
     <li class="mat-tree-node">
-      <!-- use a disabled button to provide padding for tree leaf -->
-
       <a class="heading-link"
       [routerLink]="['articles', node.id]"
       routerLinkActive="selected">
@@ -24,7 +22,7 @@
         </button>
         {{node.title}}
       </div>
-      <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
+      <ul [class.tree-invisible]="!treeControl.isExpanded(node)">
         <ng-container matTreeNodeOutlet></ng-container>
       </ul>
     </li>
