--- a/src/app/components/rubric/rubric.component.css
+++ b/src/app/components/rubric/rubric.component.css
@@ -2,17 +2,20 @@
   display: block;
   padding: 0 24px;
 }
-.example-tree-invisible {
+.tree-invisible {
   display: none;
 }
 
-.example-tree ul{
+.tree ul{
   margin: 0;
   padding: 0;
+  white-space: nowrap;
+  
 }
-.example-tree li {
+.tree li {
   list-style: none;
   padding: 0 0 0 12px;
+  
 }
 
 .heading-link {
