Fix article content view

--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -11,8 +11,8 @@
       <br>
       Последнее обновление: {{ article.updateTime | date: "dd.MM.yyyy HH:mm" }}      
     </div>
-    <div class="content" markdown>
-      {{ article.content }}
+    <div class="content" markdown [data]="article.content ">
+      
     </div>
   </div>
 
