--- a/src/app/components/article/article.component.css
+++ b/src/app/components/article/article.component.css
@@ -4,7 +4,7 @@
 
 .title {
   margin: 0;
-  font-size: 60px;
+  font-size: 36px;
   font-weight: 300;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .version {
-
+  display: block;
 }
 
 .content {
