--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -5,15 +5,14 @@
     </h1>
   </div>
   
-  <div>
+  <div class="content">
     <div class="info">
       <span class="version">Версия: {{ article.version }}</span>
-      <br>
       Последнее обновление: {{ article.updateTime | date: "dd.MM.yyyy HH:mm" }}      
     </div>
-    <div class="content" markdown [data]="article.content ">
-      
-    </div>
+
+    <quill-view [content]="article.content" format="text" theme="snow"></quill-view>
+
   </div>
 
   <div class="btn-controls">
