--- a/src/styles.css
+++ b/src/styles.css
@@ -15,33 +15,35 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   color: #5f6368;
-  
+  font-weight: 400;
 }
+
 .ql-container {
   font-size: 16px;
+  font-family: "Roboto", sans-serif;
 }
 .ql-snow .ql-editor h1 {
   font-size: 48px;
   margin: 0;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .ql-snow .ql-editor h2 {
   font-size: 34px;
   margin: 0;
-  font-weight: 400;
+  font-weight: 300;
   letter-spacing: 0.25;
 }
 
 .ql-snow .ql-editor h3 {
   font-size: 24px;
   margin: 0;
-  font-weight: 400;
+  font-weight: 300;
 }
 .ql-snow .ql-editor h4 {
   font-size: 20px;
   margin:0;
-  font-weight: 400;
+  font-weight: 300;
   letter-spacing: 0.15;
 }
 .ql-snow .ql-editor p {
