--- a/src/app/components/article-editor/article-editor.component.html
+++ b/src/app/components/article-editor/article-editor.component.html
@@ -11,7 +11,7 @@
   <button (click)="save();" mat-raised-button color="primary" class="button">
     Сохранить
   </button>
-  <button [routerLink]="['/articles', id]" mat-raised-button class="button">
+  <button (click)="goBack()" mat-raised-button class="button">
     Отменить
   </button>
 </div>
