#33 Add rubric menu

--- a/src/app/components/rubric/rubric.component.css
+++ b/src/app/components/rubric/rubric.component.css
@@ -38,3 +38,11 @@
 .selected {
   font-weight: bold;
 }
+
+.kebab-button {
+  margin-left: auto;
+  visibility: hidden;
+}
+.mat-tree-node:hover .kebab-button, .kebab-button:hover{
+  visibility: visible;
+}
