#42: Update tags component for work with tags service

--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -17,9 +17,8 @@
       (matChipInputTokenEnd)="add($event)">
   </mat-chip-list>
   <mat-autocomplete  #auto="matAutocomplete" (optionSelected)="selected($event)" >
-    <mat-option *ngFor="let tag of filteredTags | async" [value]="tag.value">
+    <mat-option *ngFor="let tag of filteredTags" [value]="tag.value">
       {{ tag.value }}
     </mat-option>
   </mat-autocomplete>
 </mat-form-field>
-<br>
