--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -13,7 +13,7 @@
           <mat-icon>create</mat-icon>
           Редактировать
         </button>
-        <button mat-menu-item>
+        <button mat-menu-item (click)="openSetRubricDialog()">
           <mat-icon>subdirectory_arrow_right</mat-icon>
           Переместить
         </button>
