#45 Add create/delete rubric  to rubrics menu

--- a/src/app/components/rubric/rubric.component.html
+++ b/src/app/components/rubric/rubric.component.html
@@ -33,11 +33,11 @@
               <mat-icon>edit</mat-icon>
               Редактировать рубрику
             </button>
-            <button mat-menu-item disabled>
+            <button mat-menu-item (click)="openDeleteDialog(node)">
               <mat-icon>delete</mat-icon>
               Удалить рубрику
             </button>
-            <button mat-menu-item disabled>
+            <button mat-menu-item (click)="openAddRubricDialog()">
                 <mat-icon>create_new_folder</mat-icon>
                 Добавить рубрику
               </button>
