Add sidenav search component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container>
   <mat-sidenav mode="side" opened disableClose>
-    <app-article-search></app-article-search>
+    <app-sidenav-search></app-sidenav-search>
     <app-rubric></app-rubric>
   </mat-sidenav>
   <mat-sidenav-content>
