46 Add create rubric button if navigation is empty

--- a/src/app/components/rubric/rubric.component.css
+++ b/src/app/components/rubric/rubric.component.css
@@ -46,3 +46,12 @@
 .mat-tree-node:hover .kebab-button, .kebab-button:hover{
   visibility: visible;
 }
+.add-rubric-icon {
+  margin-right: 6px;
+}
+.add-rubric-button {
+  /* font-size: 16px; */
+  display: flex;
+  align-content: center;
+  margin-left: 12px;
+}
