--- a/src/app/components/rubric/rubric.component.html
+++ b/src/app/components/rubric/rubric.component.html
@@ -1,4 +1,9 @@
 <p class="hidden">78: ВОЕННОЕ ДЕЛО</p>
+<div *ngIf="rubrics.length===0">
+  <button class='add-rubric-button' mat-button mat-raised-button color="primary" (click)="openAddRubricDialog()">
+      <mat-icon class='add-rubric-icon'>create_new_folder</mat-icon>
+      Добавить рубрику</button>
+</div>
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="tree">
   <!-- This is the tree node template for leaf nodes -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
