--- a/src/app/components/set-rubric-dialog/set-rubric-dialog.component.html
+++ b/src/app/components/set-rubric-dialog/set-rubric-dialog.component.html
@@ -1,1 +1,19 @@
-<p>set-rubric-dialog works!</p>
+<div mat-dialog-content>
+    <p>Укажите название новой рубрики</p>    
+</div>
+<app-article-search
+    type="rubric"
+    (selected)="setRubric($event)"
+></app-article-search>
+<div mat-dialog-actions>
+    <button
+        mat-button
+        mat-raised-button
+        color="primary"
+        [disabled]="disabled"
+        [mat-dialog-close]="result">Ok</button>
+    <button
+        mat-button
+        mat-dialog-close 
+        (click)="onNoClick()">Отмена</button>
+</div>
