--- a/src/app/components/rubric/rubric.component.html
+++ b/src/app/components/rubric/rubric.component.html
@@ -1,5 +1,5 @@
 <p class="hidden">78: ВОЕННОЕ ДЕЛО</p>
-<div *ngIf="rubrics.length===0">
+<div *ngIf="buttonVisible">
   <button class='add-rubric-button' mat-button mat-raised-button color="primary" (click)="openAddRubricDialog()">
       <mat-icon class='add-rubric-icon'>create_new_folder</mat-icon>
       Добавить рубрику</button>
