Remove field autoreset from article search component

--- a/src/app/components/sidenav-search/sidenav-search.component.html
+++ b/src/app/components/sidenav-search/sidenav-search.component.html
@@ -1,1 +1,1 @@
-<app-article-search (selected)="handleSelect($event)" class="search"></app-article-search>
+<app-article-search #search (selected)="handleSelect($event)" class="search"></app-article-search>
