--- a/src/app/components/rubric/rubric.component.html
+++ b/src/app/components/rubric/rubric.component.html
@@ -34,7 +34,7 @@
             <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #beforeMenu="matMenu" xPosition="before">
-            <button mat-menu-item disabled>
+            <button mat-menu-item (click)="openUpdateRubricDialog(node)">
               <mat-icon>edit</mat-icon>
               Редактировать рубрику
             </button>
