--- a/src/app/components/rubric/rubric.component.html
+++ b/src/app/components/rubric/rubric.component.html
@@ -42,7 +42,7 @@
               <mat-icon>delete</mat-icon>
               Удалить рубрику
             </button>
-            <button mat-menu-item (click)="openAddRubricDialog(null)">
+            <button mat-menu-item (click)="openAddRubricDialog()">
                 <mat-icon>create_new_folder</mat-icon>
                 Добавить рубрику
               </button>
