--- a/src/app/components/article-search/article-search.component.html
+++ b/src/app/components/article-search/article-search.component.html
@@ -1,5 +1,5 @@
 <form>
-    <mat-form-field>
+    <mat-form-field class="search-field">
         <input #searchInput type="text" placeholder="Поиск..." matInput [formControl]="searchControl"
             [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete" (optionSelected)="handleSelect($event)" [displayWith]="display">
