Add header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <mat-sidenav-container>
   <mat-sidenav mode="side" opened disableClose>
     <app-sidenav-search></app-sidenav-search>
