--- a/src/app/components/rubric/rubric.component.html
+++ b/src/app/components/rubric/rubric.component.html
@@ -1,8 +1,10 @@
-<p class="hidden">78: ВОЕННОЕ ДЕЛО</p>
-<div *ngIf="buttonVisible">
-  <button class='add-rubric-button' mat-button mat-raised-button color="primary" (click)="openAddRubricDialog()">
-      <mat-icon class='add-rubric-icon'>create_new_folder</mat-icon>
-      Добавить рубрику</button>
+<div>
+  <button class='add-rubric-button' mat-flat-button (click)="openAddRubricDialog(0)">
+    <div class="icon-wrapper add-icon-wrapper">
+      <mat-icon>create_new_folder</mat-icon>
+    </div>
+    Добавить рубрику
+  </button>
 </div>
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="tree">
   <!-- This is the tree node template for leaf nodes -->
@@ -10,46 +12,45 @@
 
     <li class="mat-tree-node">
       <button mat-icon-button disabled></button>
-      <a class="heading-link"
-      [matTooltip]="node.title"
-      matTooltipPosition="after"
-      [routerLink]="['articles', node.id]"
-      routerLinkActive="selected">
-      {{ node.title }}
-    </a>
+      <a class="heading-link" [matTooltip]="node.title" matTooltipPosition="after" [routerLink]="['articles', node.id]"
+        routerLinkActive="selected">
+        <div class="icon-wrapper">
+          <mat-icon class="icon">insert_drive_file</mat-icon>
+        </div>
+        <div class="heading-link-content">{{ node.title }}</div>
+      </a>
     </li>
   </mat-tree-node>
   <!-- This is the tree node template for expandable nodes -->
-  <mat-nested-tree-node *matTreeNodeDef="let node; when: isRubric">
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: isRubric" class="tree-node">
     <li>
-      <div class="mat-tree-node">
-        <button mat-icon-button matTreeNodeToggle
-                [attr.aria-label]="'toggle ' + node.title">
+      <div class="mat-tree-node" matTreeNodeToggle>
+        <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.title">
           <mat-icon class="mat-icon-rtl-mirror">
             {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
           </mat-icon>
         </button>
         {{node.title}}
-        <button class="kebab-button"  mat-icon-button mat-button [matMenuTriggerFor]="beforeMenu">
-            <mat-icon>more_vert</mat-icon>
+        <button class="kebab-button" mat-icon-button mat-button [matMenuTriggerFor]="beforeMenu">
+          <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #beforeMenu="matMenu" xPosition="before">
-            <button mat-menu-item (click)="openUpdateRubricDialog(node)">
-              <mat-icon>edit</mat-icon>
-              Редактировать рубрику
-            </button>
-            <button mat-menu-item (click)="openDeleteDialog(node)">
-              <mat-icon>delete</mat-icon>
-              Удалить рубрику
-            </button>
-            <button mat-menu-item (click)="openAddRubricDialog()">
-                <mat-icon>create_new_folder</mat-icon>
-                Добавить рубрику
-              </button>
-              <button mat-menu-item [routerLink]="['/articles', node.id, 'add']">
-                <mat-icon>note_add</mat-icon>
-                Добавить статью
-              </button>
+          <button mat-menu-item (click)="openUpdateRubricDialog(node)">
+            <mat-icon>edit</mat-icon>
+            Редактировать рубрику
+          </button>
+          <button mat-menu-item (click)="openDeleteDialog(node)">
+            <mat-icon>delete</mat-icon>
+            Удалить рубрику
+          </button>
+          <button *ngIf="!node.parentId" mat-menu-item (click)="openAddRubricDialog(node.id)">
+            <mat-icon>create_new_folder</mat-icon>
+            Добавить рубрику
+          </button>
+          <button mat-menu-item [routerLink]="['/articles', node.id, 'add']">
+            <mat-icon>note_add</mat-icon>
+            Добавить статью
+          </button>
         </mat-menu>
       </div>
       <ul [class.tree-invisible]="!treeControl.isExpanded(node)">
