--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,11 +1,21 @@
 .main-header {
-  padding: 20px 24px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+
+  box-sizing: border-box;
+  width: 100%;
+  height: 72px;
+  padding: 24px;
+
+  background: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .header-link {
-  color: black;
+  color: #212121;
   font-weight: 400;
-  font-size: 28px;
+  font-size: 16px;
   text-decoration: none;
 }
