--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <div class="main-header">
-    <a [routerLink]="['/']" class=header-link>«Макет ПС сбора, хранения, накопления военно-научных знаний»</a>
+    <a [routerLink]="['/']" class=header-link>Макет ПС сбора, хранения, накопления военно-научных знаний</a>
 </div>
